# asusctl-control-center

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  NPM_WRAPPER.md  PUBLISHING.md  SUPPORT.md  TROUBLESHOOTING.md  VALIDATION.md
npm-wrapper/: LICENSE  README.md  package.json
npm-wrapper/lib/: api.js  manifest.json
npm-wrapper/test/: wrapper.test.js
packaging/: asus-linux-control-center.desktop
scripts/: install-user.sh  launch.sh
src/asus_linux_control_center/: app.py  cli.py  constants.py  logging_utils.py  models.py  paths.py  settings.py  utils.py
src/asus_linux_control_center/backends/: __init__.py  asusctl.py  commands.py  supergfxctl.py  sysfs.py
src/asus_linux_control_center/services/: __init__.py  controller.py  detection.py  diagnostics.py
src/asus_linux_control_center/ui/: components.py  main_window.py  styles.py
src/asus_linux_control_center/ui/pages/: __init__.py  diagnostics.py  hardware.py  overview.py  performance.py  settings.py
src/asus_linux_control_center/ui/widgets/: __init__.py  curve_editor.py  status_indicator.py  toast_overlay.py  unavailable_notice.py
tests/: test_asusctl_parsers.py  test_backend_actions.py  test_commands.py  test_controller.py  test_detection.py  test_gui_pages.py  test_settings.py  test_supergfxctl.py  test_sysfs.py  test_utils.py
